crates/fixtures/tests/snapshots/hostile__plugin_extensions.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      149
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "plugin-geometry",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "8@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 18432,
        "line_height": 22118,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style plugin"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "A sandbox shapes this",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 22118
          },
          "baseline": 17519,
          "width": 180726,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 18432,
              "level": 0,
              "x": 0,
              "width": 185021
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 22,
            "end": 37
          },
          "preview": "paragraph with",
          "rect": {
            "origin": {
              "x": 28160,
              "y": 22118
            },
            "width": 168960,
            "height": 22118
          },
          "baseline": 39637,
          "width": 125561,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 22,
                "end": 37
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 18432,
              "level": 0,
              "x": 28160,
              "width": 129856
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 37,
            "end": 52
          },
          "preview": "three steps of",
          "rect": {
            "origin": {
              "x": 56320,
              "y": 44236
            },
            "width": 112640,
            "height": 22118
          },
          "baseline": 61755,
          "width": 110664,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 37,
                "end": 52
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 18432,
              "level": 0,
              "x": 56320,
              "width": 114959
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 52,
            "end": 78
          },
          "preview": "inset. Every byte remains",
          "rect": {
            "origin": {
              "x": 0,
              "y": 66354
            },
            "width": 225280,
            "height": 22118
          },
          "baseline": 83873,
          "width": 208078,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 52,
                "end": 78
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 18432,
              "level": 0,
              "x": 0,
              "width": 212373
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 78,
            "end": 96
          },
          "preview": "in reading order,",
          "rect": {
            "origin": {
              "x": 28160,
              "y": 88472
            },
            "width": 168960,
            "height": 22118
          },
          "baseline": 105991,
          "width": 137356,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 78,
                "end": 96
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 18432,
              "level": 0,
              "x": 28160,
              "width": 141651
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 96,
            "end": 104
          },
          "preview": "and the",
          "rect": {
            "origin": {
              "x": 56320,
              "y": 110590
            },
            "width": 112640,
            "height": 22118
          },
          "baseline": 128109,
          "width": 61674,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 96,
                "end": 104
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 18432,
              "level": 0,
              "x": 56320,
              "width": 65969
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 104,
            "end": 131
          },
          "preview": "relation reports its first",
          "rect": {
            "origin": {
              "x": 0,
              "y": 132708
            },
            "width": 225280,
            "height": 22118
          },
          "baseline": 150227,
          "width": 189460,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 104,
                "end": 131
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 18432,
              "level": 0,
              "x": 0,
              "width": 193755
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 131,
            "end": 136
          },
          "preview": "line.",
          "rect": {
            "origin": {
              "x": 28160,
              "y": 154826
            },
            "width": 168960,
            "height": 22118
          },
          "baseline": 172345,
          "width": 36552,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 131,
                "end": 136
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 18432,
              "level": 0,
              "x": 28160,
              "width": 36552
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "148@1",
      "schema": "fixture.plugin-report",
      "owner": null,
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "to",
          "status": "valid",
          "resolved": {
            "line": {
              "node": "8@1",
              "line": 0
            }
          }
        }
      ]
    }
  ],
  "diagnostics": []
}
