crates/fixtures/tests/snapshots/hostile__rational_rotation_extreme.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      83
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "awkward",
    "source": "document"
  },
  "pages": [
    {
      "width": 368640,
      "height": 368640
    }
  ],
  "frames": [
    {
      "name": "awkward",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": -47692,
        "yx": 44950,
        "xy": -44950,
        "yy": -47692,
        "tx": 225280,
        "ty": 184320
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 163840,
        "height": 92160
      }
    }
  ],
  "blocks": [
    {
      "node": "8@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 31
          },
          "preview": "An exact irrational direction,",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 163840,
            "height": 13517
          },
          "baseline": 10707,
          "width": 145242,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 31
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 147867
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 31,
            "end": 59
          },
          "preview": "authored with integers near",
          "rect": {
            "origin": {
              "x": 0,
              "y": 13517
            },
            "width": 163840,
            "height": 13517
          },
          "baseline": 24224,
          "width": 139409,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 31,
                "end": 59
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 142034
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 59,
            "end": 72
          },
          "preview": "their limits.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 27034
            },
            "width": 163840,
            "height": 13517
          },
          "baseline": 37741,
          "width": 58846,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 59,
                "end": 72
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 58846
            }
          ]
        }
      ]
    }
  ],
  "relations": [],
  "diagnostics": []
}
