crates/fixtures/tests/snapshots/hostile__reading_cycle.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      59
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "default",
    "source": "builtin"
  },
  "pages": [
    {
      "width": 430080,
      "height": 307200
    }
  ],
  "frames": [
    {
      "name": "main",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 36864,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 225280,
        "height": 233472
      }
    },
    {
      "name": "margin",
      "role": "margin",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 280576,
        "ty": 36864
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 112640,
        "height": 233472
      }
    }
  ],
  "blocks": [
    {
      "node": "6@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 11
          },
          "preview": "First room.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 10707,
          "width": 56130,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 11
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 56130
            }
          ]
        }
      ]
    },
    {
      "node": "21@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 12
          },
          "preview": "Second room.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 21709
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 32416,
          "width": 69579,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 12
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 69579
            }
          ]
        }
      ]
    },
    {
      "node": "37@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 11264,
        "line_height": 13517,
        "explain": {
          "family": "default",
          "line-height": "default",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 11
          },
          "preview": "Third room.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 43418
            },
            "width": 225280,
            "height": 13517
          },
          "baseline": 54125,
          "width": 61142,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 11
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 11264,
              "level": 0,
              "x": 0,
              "width": 61142
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "52@1",
      "schema": "reprise.reading-order",
      "owner": null,
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "after",
          "status": "valid",
          "resolved": {
            "node": "21@1"
          }
        },
        {
          "role": "before",
          "status": "valid",
          "resolved": {
            "node": "6@1"
          }
        }
      ]
    },
    {
      "id": "54@1",
      "schema": "reprise.reading-order",
      "owner": null,
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "after",
          "status": "valid",
          "resolved": {
            "node": "37@1"
          }
        },
        {
          "role": "before",
          "status": "valid",
          "resolved": {
            "node": "21@1"
          }
        }
      ]
    },
    {
      "id": "56@1",
      "schema": "reprise.reading-order",
      "owner": null,
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "after",
          "status": "valid",
          "resolved": {
            "node": "6@1"
          }
        },
        {
          "role": "before",
          "status": "valid",
          "resolved": {
            "node": "37@1"
          }
        }
      ]
    },
    {
      "id": "58@1",
      "schema": "reprise.reading-order",
      "owner": null,
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "after",
          "status": "valid",
          "resolved": {
            "node": "6@1"
          }
        },
        {
          "role": "before",
          "status": "valid",
          "resolved": {
            "node": "21@1"
          }
        }
      ]
    }
  ],
  "diagnostics": [
    {
      "severity": "warning",
      "code": "layout.reading-conflict",
      "subject": {
        "kind": "relation",
        "id": "58@1"
      },
      "message": "opposite reading constraints conflict; cycle repair determines the order",
      "bytes": null
    },
    {
      "severity": "warning",
      "code": "layout.reading-cycle",
      "subject": {
        "kind": "node",
        "id": "6@1"
      },
      "message": "reading cycle broken at its first semantic member",
      "bytes": null
    }
  ]
}
